fix section spacing on desktop

--- a/src/styles/puzzle-palace.css
+++ b/src/styles/puzzle-palace.css
@@ -92,6 +92,9 @@ section{
 
     @media (min-width: 768px) {
         margin: 120px 20px;
+        h1{
+            margin-bottom:120px;
+        }
     }
 }
 
@@ -116,10 +119,6 @@ img.type-kit{
     h1{
         text-transform: none;
         letter-spacing: 0;
-    }
-
-    @media (min-width: 768px) {
-        padding-top:75px;
     }
 }
 
